[package]
name = "gossip-glomers"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.214", features=["derive"] }
serde_json = "1.0.132"
futures = "0.3.27"
log = "0.4.17"
pretty_env_logger = "0.5.0"
anyhow = "1.0.70"
tokio-stream = { version = "0.1.16", features = ["io-util"]}
serde_with = "3.11.0"
